# modern-cpp20

./: .gitignore  README.md
01new_base_type/: main.cpp
02inline_extend/: a.cpp  a.hpp  b.hpp  main.cpp
03auto_decltype/: main.cpp
04trailing_return_type/: main.cpp  type_name.hpp
05rvalue_ref/: main.cpp
06lambda/: main.cpp
07init_extend/: main.cpp
08ctor_extend/: main.cpp
09enum_extend/: main.cpp
10aggregate_extend/: main.cpp
11new_derived_keywords/: main.cpp
12range_for/: main.cpp
13structured_binding/: main.cpp
14noexcept_keyword/: main.cpp
15spaceship_operator/: main.cpp
16const_expression/: main.cpp
17align_operator/: main.cpp
18new_attribute_macro/: main.cpp
19some_important_optimize/: main.cpp
20module/: CMakeLists.txt  a.cpp  a.hpp  main.cpp  math.ixx  math_impl.cpp
21template_optimize/: header.h  main.cpp  other.cpp
22var_param_template/: main.cpp
23template_derivation/: main.cpp
24concept_requires/: main.cpp
25new_stl_func/: .clangd  main.cpp
26range/: main.cpp
27smart_ptr/: main.cpp
28multi_thread/01base_thread/: main.cpp
28multi_thread/02mutex/: main.cpp
28multi_thread/03sync_primitive/: main.cpp
28multi_thread/04async/: main.cpp
29coroutine/: main.cpp
30cpp23_new_features/: main.cpp
